Fix inital frame of arrow incorrectly displaying
Fixes a bug where the first frame of an arrow appears off-centre.
The frame appears when the panel becomes visible, rather than when
it is created, hence an initially low opacity effectively fixes it.
I'm still not sure what exactly causes this bug.

--- a/content/panorama/styles/custom_game/incidents.css
+++ b/content/panorama/styles/custom_game/incidents.css
@@ -93,6 +93,7 @@
 /*----------------------------------------------------------------------------*/
 
 #Arrow {
+    opacity: 0.0001; /* Fixes inital frame incorrectly displaying */
     height: 60px;
     width: 60px;
 }
